# tagQ

./: .gitignore  CMakeLists.txt  README.md  tagQ.pro
.github/workflows/: cmake-multi-platform.yml
src/: application.cpp  application.h  audiofile.cpp  audiofile.h  filebrowser.cpp  filebrowser.h  filelist.cpp  filelist.h  main.cpp  mainwindow.cpp  mainwindow.h  metadataeditor.cpp  metadataeditor.h  resources.qrc  tagQ.desktop  tagsmanager.cpp  tagsmanager.h
tests/: CMakeLists.txt  test_audiofile.cpp  test_integration.cpp  test_tagsmanager.cpp
